<resources>
    <string name="app_name">MarvelDataverse</string>
    <string name="singin">Sing-In</string>
    <string name="login">Log-In</string>
    <string name="about">About...</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="characters_management">Characters Management</string>
    <string name="series_management">Series Management</string>
    <string name="comics_management">Comics Management</string>
    <string name="logout">Log-out</string>
    <string name="add_character">Add Character</string>
    <string name="invalid_fields">Invalid Fields</string>
    <string name="singin_successful">Sing-In Successful</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="login_successful">Login Successful</string>
    <string name="email_invalid">The email is not valid</string>
    <string name="passwd_invalid">The password must be 3 -20 letters (a-zA-Z) or numbers</string>
    <string name="username_invalid">The username must be 3-20 letters (a-zA-Z) or numbers</string>
    <string name="bd_error">Database error, please try again</string>
    <string name="username_exists">Username already exists</string>
    <string name="email_exists">Email already exists</string>
    <string name="welcome_message">Welcome to MarvelDataverse</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_email">Enter email</string>
    <string name="authors">Authors</string>
    <string name="yomar_costa_orellana" translatable="false">Yomar Costa Orellana</string>
    <string name="raul_varandela_marra" translatable="false">Raúl Varandela Marra</string>
    <string name="jose_manuel_vinas_cid" translatable="false">José Manuel Viñas Cid</string>
    <string name="soon">Soon...</string>
    <string name="go_back">Go Back</string>
    <string name="description_invalid">Descriptions can only contain alphanumerics and punctuation marks ( ) . , ; \' -</string>
    <string name="name_invalid">Names can only contain alphanumeric, spaces and dash</string>
    <string name="search_invalid">Must be between 0 and 20 characters ( number, letters . or - )</string>
    <string name="CreateCharacter">Create your own character</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="character_exists">This character already exists</string>
    <string name="character_add_successful">Character successfully created</string>
    <string name="character_details">Character Details</string>
    <string name="edit_character">Edit  Character</string>
    <string name="character_edit_successful">Character successfully edited</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_character_msg">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="character_remove_successful">Character successfully remove</string>
    <string name="comment_invalid">Comments can only contain alphanumerics and punctuation marks ( ) . , ;  \' -</string>
    <string name="admin_view">Admin View</string>
    <string name="user_view">User View</string>
    <string name="isAdmin">Is Admin?</string>
    <string name="characters">Characters</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="edit_this_character">Edit this character</string>
    <string name="welcome_to">Welcome to</string>
    <string name="marvel_dataverse" translatable="false">Marvel Dataverse</string>
    <string name="fav">Add to favourites</string>
    <string name="unfav">Remove from favourites</string>
    <string name="comment">comment</string>
    <string name="comments">comments</string>
    <string name="enter_comment">commentary</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="delete_comment_msg">delete_comment_msg</string>
    <string name="github" translatable="false">[GitHub]</string>
</resources>