<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.CharactersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight=".05"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor = "@android:color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/CreateCharacter">

        </TextView>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight=".2">

        <EditText
            android:gravity="top"
            android:id="@+id/btnCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:layout_weight=".6">

        <EditText
            android:gravity="top"
            android:id="@+id/btnCharacterDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/send"
            android:textColor="@android:color/white" />
        <!-- TODO Se pueden separar sin margen los botones? y quiero hacerlos mas grandes-->
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>