<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.CoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCharactersManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/characters_management"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnComicsManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_disabled"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/comics_management"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnSeriesManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_disabled"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/series_management"/>

    </LinearLayout>


</LinearLayout>