<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/logo_circular" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/welcome_message"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight=".5"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/btnSingin"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/singin"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>